Add Physics of RF Plasma citation to inductively coupled plasma

--- a/paper/plasma-iv-characteristics.bib
+++ b/paper/plasma-iv-characteristics.bib
@@ -14,3 +14,12 @@ url = {http://beta.iopscience.iop.org/1009-0630/12/2/12$\backslash$nhttp://iopsc
 volume = {12},
 year = {2010}
 }
+
+@book{physics-radio-frequency,
+	booktitle = "Physics of Radio-Frequency Plasmas",
+	author = "Chabert, Pascal, Braithwaite, Nicholas",
+	year = "2011",
+	url = "http://app.knovel.com/hotlink/toc/id:kpPRFP0003/physics-radio-frequency/physics-radio-frequency",
+	isbn = "978-0-521-76300-4",
+	publisher = "Cambridge University Press",
+}
