--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -6,7 +6,7 @@
 \usepackage{siunitx}
 
 \begin{document}
-\title{Characterization of IV Curve for Plasma of Air}
+\title{Ignition and Extinction Characteristics of a Capacitively Coupled Plasma}
 \author{Daniel Underwood}
 \date{\today}
 
