Update discussion section

--- a/paper/plasma-iv-characteristics.bib
+++ b/paper/plasma-iv-characteristics.bib
@@ -23,3 +23,24 @@ year = {2010}
 	isbn = "978-0-521-76300-4",
 	publisher = "Cambridge University Press",
 }
+
+@book{F.F.Chen1989,
+abstract = {Predicting the binding mode of flexible polypeptides to proteins is an important task that falls outside the domain of applicability of most small molecule and protein−protein docking tools. Here, we test the small molecule flexible ligand docking program Glide on a set of 19 non-$\alpha$-helical peptides and systematically improve pose prediction accuracy by enhancing Glide sampling for flexible polypeptides. In addition, scoring of the poses was improved by post-processing with physics-based implicit solvent MM- GBSA calculations. Using the best RMSD among the top 10 scoring poses as a metric, the success rate (RMSD ≤ 2.0 {\AA} for the interface backbone atoms) increased from 21{\%} with default Glide SP settings to 58{\%} with the enhanced peptide sampling and scoring protocol in the case of redocking to the native protein structure. This approaches the accuracy of the recently developed Rosetta FlexPepDock method (63{\%} success for these 19 peptides) while being over 100 times faster. Cross-docking was performed for a subset of cases where an unbound receptor structure was available, and in that case, 40{\%} of peptides were docked successfully. We analyze the results and find that the optimized polypeptide protocol is most accurate for extended peptides of limited size and number of formal charges, defining a domain of applicability for this approach.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {F.F.Chen},
+booktitle = {Journal of Chemical Information and Modeling},
+doi = {10.1017/CBO9781107415324.004},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/danielunderwood/Documents/Mendeley Desktop/F.F.Chen - 1989 - Introduction to plasma physics and controlled fusion.pdf:pdf},
+isbn = {9788578110796},
+issn = {1098-6596},
+keywords = {icle},
+mendeley-groups = {Textbooks,Plasma},
+pages = {160},
+pmid = {25246403},
+title = {{Introduction to plasma physics and controlled fusion}},
+volume = {53},
+year = {1989}
+}
+
