Add comment on continues work by Mann and Morton

--- a/paper/plasma-iv-characteristics.bib
+++ b/paper/plasma-iv-characteristics.bib
@@ -44,3 +44,9 @@ volume = {53},
 year = {1989}
 }
 
+@unpublished{Mann2015,
+author = {Mann, Michael E. and Morton, Travis},
+title = {Determination of the pumping, current-voltage, and initiation field properties of a low pressure plasma of air},
+month = {5},
+year = {2015}
+}
