--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -18,7 +18,7 @@
 \section{Introduction}
 Plasmas are quasineutral substances consisting of ionized atoms and the electrons removed from those atoms. Due to the quasineutral nature of plasmas, electromagnetic fields outside of the plasma are negligible while the internal fields are extremely complex. While rather rare on Earth, plasmas are ubiquitous throughout the rest of the universe \cite{F.F.Chen1989}.
 
-In our experiment, we generate an RF signal between two electrodes, which creates a capacitively coupled plasma (CCP) between the plates with a Debye sheath at the plates, as shown in \cref{fig:plasma-sheath}.
+In our experiment, we continue the previous work of Mann and Morton \cite{Mann2015} by generating an RF signal between two electrodes, which creates a capacitively coupled plasma (CCP) between the plates with a Debye sheath at the plates, as shown in \cref{fig:plasma-sheath}.
 
 \begin{figure}
 \includegraphics[width=\columnwidth]{../resources/plasma-sheath.png}
