Add report outline to introduction

--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -20,6 +20,8 @@ Plasmas are quasineutral substances consisting of ionized atoms and the electron
 
 In our experiment, we continue the previous work of Mann and Morton \cite{Mann2015} by generating an RF signal between two electrodes, which creates a capacitively coupled plasma (CCP) between the plates with a Debye sheath at the plates, as shown in \cref{fig:plasma-sheath}.
 
+In this paper, we will examine the equipment and errors in our experimental setup, present the results we have collected, discuss those results, and conclude with final thoughts and direction for future work.
+
 \begin{figure}
 \includegraphics[width=\columnwidth]{../resources/plasma-sheath.png}
 \caption{(Color Online) Capacitor plates and Debye sheath}
