Add results figure and text

--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -34,6 +34,14 @@ The plasma was generated within a vacuum chamber at a pressure on the order of $
 
 \section{Results}
 
+The collected voltage data is shown in \cref{fig:ignition-equilibrium-extinction}.
+
+\begin{figure}
+\includegraphics[width=\columnwidth]{../resources/ignition-equilibrium-extinction.pdf}
+\caption{(Color Online) Collected ignition, equilibrium, and extinction voltage}
+\label{fig:ignition-equilibrium-extinction}
+\end{figure}
+
 \section{Discussion}
 
 \section{Conclusion}
