Put float modifier on figures to place them in reasonable positions

--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -22,7 +22,7 @@ In our experiment, we continue the previous work of Mann and Morton \cite{Mann20
 
 In this paper, we will examine the equipment and errors in our experimental setup, present the results we have collected, discuss those results, and conclude with final thoughts and direction for future work.
 
-\begin{figure}
+\begin{figure}[h]
 \includegraphics[width=\columnwidth]{../resources/plasma-sheath.png}
 \caption{(Color Online) Capacitor plates and Debye sheath}
 \label{fig:plasma-sheath}
@@ -36,7 +36,7 @@ The plasma was generated within a vacuum chamber at a pressure on the order of $
 
 The collected voltage data is shown in \cref{fig:ignition-equilibrium-extinction}.
 
-\begin{figure}
+\begin{figure}[h]
 \includegraphics[width=\columnwidth]{../resources/ignition-equilibrium-extinction.pdf}
 \caption{(Color Online) Collected ignition, equilibrium, and extinction voltage}
 \label{fig:ignition-equilibrium-extinction}
