--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -44,6 +44,8 @@ The collected voltage data is shown in \cref{fig:ignition-equilibrium-extinction
 
 \section{Discussion}
 
+As can be seen in \cref{fig:ignition-equilibrium-extinction}, our collected ignition voltages do not follow the same pattern as expected by Paschen's Law. The largest evidence of this is the negative curvature that is seen in at the higher pressures -- Pachen's Law produces a curve with exclusively positive curvature. The other clear difference from Paschen's Law is that we do not find a sharp increase at lower pressures.
+
 \section{Conclusion}
 
 In the context of an educational laboratory, our experiment may be improved by continually taking measurements of the power and voltage in order to obtain the information necessary to have an IV curve for the plasma and subsequently extract IV characteristics from the plasma. In addition to our setup of a capacitively coupled plasma,  the equipment may be used to generate an inductively coupled plasma by replacing the electrode plates with a solenoid and modifying the vacuum system to pump along the axis of the solenoid, as described in \cite{physics-radio-frequency,Jiayin2010}.
