Add Paschen curve fit model

--- a/paper/plasma-iv-characteristics.bib
+++ b/paper/plasma-iv-characteristics.bib
@@ -50,3 +50,11 @@ title = {Determination of the pumping, current-voltage, and initiation field pro
 month = {5},
 year = {2015}
 }
+
+@book{Lieberman2005,
+booktitle = {Principles of plasma discharges and materials processing},
+author = {Lieberman, Michael A. and Lichtenberg, Allan J.},
+pages = {546},
+year = {2005},
+title = {Principles of plasma discharges and materials processing}
+}
