Rename extinction ignition plot since it doesn't include equilibrium voltages

--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -49,17 +49,17 @@ Unfortunately, as discussed in later sections, our data was not able to be analy
 
 \section{Results}
 
-The collected voltage data is shown in \cref{fig:ignition-equilibrium-extinction}.
+As can be seen in \cref{fig:ignition-extinction}, our collected ignition voltages do not follow the same pattern as expected by Paschen's Law. The largest evidence of this is the negative curvature that is seen in at the higher pressures -- Pachen's Law produces a curve with exclusively positive curvature. The other clear difference from Paschen's Law is that we do not find a sharp increase at lower pressures.
 
 \begin{figure}[h]
-\includegraphics[width=\columnwidth]{../resources/ignition-equilibrium-extinction.pdf}
+\includegraphics[width=\columnwidth]{../resources/ignition-extinction.pdf}
 \caption{(Color Online) Collected ignition, equilibrium, and extinction voltage}
-\label{fig:ignition-equilibrium-extinction}
+\label{fig:ignition-extinction}
 \end{figure}
 
 \section{Discussion}
 
-As can be seen in \cref{fig:ignition-equilibrium-extinction}, our collected ignition voltages do not follow the same pattern as expected by Paschen's Law. The largest evidence of this is the negative curvature that is seen in at the higher pressures -- Pachen's Law produces a curve with exclusively positive curvature. The other clear difference from Paschen's Law is that we do not find a sharp increase at lower pressures.
+
 
 \section{Conclusion}
 
