Remove quotation marks from ignition, equilibrium, and extinction voltages

--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -34,7 +34,7 @@ The plasma was generated within a vacuum chamber at a pressure on the order of $
 
 Data was recorded manually and statistical uncertainties were taken to be the maximum change from the mean value over a two second interval. It should be noted that this is likely an overestimation of error as it is the range rather than the standard deviation of the data; this could result in errors in data analysis and overfitting of the data. There were also systematic errors in our data with a $10^{-4}\:\rm{T}$ resolution on the pressure gauge and a $2.56\:\rm{V}$ resolution in the voltage measurements. It was not necessary in this case to include the error by the power supply since the only values of interest are read at the oscilloscope, but it will likely be important for future experiments. Both of these are negligible compared to the collected statistical uncertainties except in the cases where statistical uncertainties were not obtained.
 
-The experimental procedure was to first pump the target chamber to a vacuum of $10^{-1}\:\rm{T}$ and then apply power between the plates until a plasma ignites. At the ignition of the plasma, we collect the ``ignition'' voltage at ignition and then the ``equilibrium'' voltage once the voltage drops due to a change in properties of the material between the plates, which is now a plasma rather than a gas and thus has different electrical properties, causing the drop in voltage. The ``equilibrium'' voltage is of some interest, but is now analyzed in this paper. After the voltage drops and ``equilibrium'' voltage is taken, we decrease the power delivered by the power supply at a rate of approximately $1\:\rm{W}$ per second until the illuminated Debye sheath disappears; at this point, we collect the ``extinction'' voltage of the plasma.
+The experimental procedure was to first pump the target chamber to a vacuum of $10^{-1}\:\rm{T}$ and then apply power between the plates until a plasma ignites. At the ignition of the plasma, we collect the ignition voltage at ignition and then the equilibrium voltage once the voltage drops due to a change in properties of the material between the plates, which is now a plasma rather than a gas and thus has different electrical properties, causing the drop in voltage. The equilibrium voltage is of some interest, but is now analyzed in this paper. After the voltage drops and equilibrium voltage is taken, we decrease the power delivered by the power supply at a rate of approximately $1\:\rm{W}$ per second until the illuminated Debye sheath disappears; at this point, we collect the extinction voltage of the plasma.
 
 The intention was to analyze the collected data in the form of a Paschen curve with the form given in \cref{eqn:paschen-curve}.
 
