Add comment about ignition and extinction voltages following same trend

--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -57,6 +57,8 @@ As can be seen in \cref{fig:ignition-extinction}, our collected ignition voltage
 \label{fig:ignition-extinction}
 \end{figure}
 
+An interesting thing to note of \cref{fig:ignition-extinction} is that our collected extinction voltages follow a trend very similar to that of the ignition voltages.
+
 \section{Discussion}
 
 
