Add closing comments

--- a/paper/plasma-iv-characteristics.bib
+++ b/paper/plasma-iv-characteristics.bib
@@ -58,3 +58,29 @@ pages = {546},
 year = {2005},
 title = {Principles of plasma discharges and materials processing}
 }
+
+@article{Hopwood1993,
+abstract = {In this work a planar, radio frequency induction plasma source is characterized in terms of ion
+density, electron temperature, and plasma potential using a single Langmuir probe in oxygen
+and noble gases. Probe measurements of density were also verified using microwave
+interferometry. Measured argon ion densities increase nearly linearly with power from 1 X lOll
+cm - J at 300 W rf power to 6 X 10$\backslash$1 cm - 3 at 1.2 k W at 1 X 10 - 3 Torr. Krypton ion densities
+are also linear with power but saturate above 1 kW at a density of 2 X 1012 cm - 3 at 1 X 10 - 3
+Torr. Electron temperatures increase with decreasing pressure from 3 e V at 26 X 10 - 3 Torr to
+7 eV at 0.3 X 10 - 3 Torr. Plasma potentials are typically 15-30 V and increase with decreasing
+pressure. Ion saturation current in oxygen at 5 X 10 - 3 Torr is 2.5{\%} uniform over diagonals of
+20 cm when a magnetic multipole bucket is used to confine the plasma. Ion generation energy
+cost in argon is 100-250 WI A.},
+author = {J. Hopwood and C. R. Guarnieri and S. J. Whitehair and J. J. Cuomo},
+doi = {10.1116/1.578282},
+file = {::},
+journal = {Journal of Vacuum Science {\&} Technology A},
+mendeley-groups = {Plasma},
+number = {1},
+pages = {152},
+title = {{Langmuir probe measurements of a radio frequency induction plasma}},
+url = {http://dx.doi.org/10.1116/1.578282},
+volume = {11},
+year = {1993}
+}
+
