--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -55,7 +55,7 @@ Unfortunately, as discussed in later sections, our data was not able to be analy
 
 \section{Results}
 
-As can be seen in \cref{fig:ignition-extinction}, our collected ignition voltages do not follow the same pattern as expected by Paschen's Law. The largest evidence of this is the negative curvature that is seen in at the higher pressures -- Pachen's Law produces a curve with exclusively positive curvature. The other clear difference from Paschen's Law is that we do not find a sharp increase at lower pressures.
+As can be seen in \cref{fig:ignition-extinction}, our collected ignition voltages do not follow the same pattern as expected by Paschen's Law. The largest evidence of this is the negative curvature that is seen in at the higher pressures -- Pachen's Law produces a curve with exclusively positive curvature in our region of interest. The other clear difference from Paschen's Law is that we do not find a sharp increase at lower pressures.
 
 \begin{figure}[h]
 \includegraphics[width=\columnwidth]{../resources/ignition-extinction.pdf}
@@ -67,11 +67,14 @@ An interesting thing to note of \cref{fig:ignition-extinction} is that our colle
 
 \section{Discussion}
 
+It is without a doubt that these are not the expected results. The expectation is that the data fits the form of a Paschen's curve, which has exclusively positive curvature. Instead, we see data this is reminiscent of the form of something such as a logistic curve. The reason for this disagreement could be that not enough data was collected to see the full characteristic of Paschen's law (\cref{eqn:paschen-curve}). Because of this, we suggest that future experiments collect a larger range of pressures ranging approximately between $10^{-2}\:\rm{T}$ and $1\:\rm{T}$.
 
 
 \section{Conclusion}
 
-In the context of an educational laboratory, our experiment may be improved by continually taking measurements of the power and voltage in order to obtain the information necessary to have an IV curve for the plasma and subsequently extract IV characteristics from the plasma. In addition to our setup of a capacitively coupled plasma,  the equipment may be used to generate an inductively coupled plasma by replacing the electrode plates with a solenoid and modifying the vacuum system to pump along the axis of the solenoid, as described in \cite{physics-radio-frequency,Jiayin2010}.
+The results of this experiment require further experiments to determine possible sources of error along with theoretical considerations to determine the validity of using Paschen's Law for our experiment or to derive another model to use. Future works should focus on expanding the range of pressures that are tested as well as determine variations by modifying the distance between the plates. An additional improvement on data measurements may be made by automating data acquisition to allow for a larger amount of data to be collected and computational techniques to be used to determine uncertainties rather than the crude method of manually determining the greatest variation from the mean to be the uncertainty.
+
+In the context of an educational laboratory, our experiment may be improved by continually taking measurements of the power and voltage in order to obtain the information necessary to have an IV curve for the plasma and subsequently extract IV characteristics from the plasma. In addition to our setup of a capacitively coupled plasma,  the equipment may be used to generate an inductively coupled plasma by replacing the electrode plates with a solenoid and modifying the vacuum system to pump along the axis of the solenoid, as described in \cite{physics-radio-frequency,Jiayin2010}. Additional interesting modifications would include making the system into a dynamic one by placing an additional source of electromagnetic fields within the chamber or using a Langmuir probe to measure various properties of the plasma. The Langmuir probe would be of particular interest with an inductively coupled plasma setup \cite{Hopwood1993}.
 
 \bibliography{plasma-iv-characteristics}
 
