--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -11,12 +11,14 @@
 \date{\today}
 
 \begin{abstract}
-
+We generate a capacitively coupled plasma at pressures on the order of $10^{-2}\:\rm{T}$ in order to examine the ignition and extinction voltage properties. We compare our results to those predicted by Paschen's Law with inconclusive results, but give direction for future work to determine the validity of our data versus what was predicted.
 \end{abstract}
 \maketitle
 
 \section{Introduction}
 Plasmas are quasineutral substances consisting of ionized atoms and the electrons removed from those atoms. Due to the quasineutral nature of plasmas, electromagnetic fields outside of the plasma are negligible while the internal fields are extremely complex. While rather rare on Earth, plasmas are ubiquitous throughout the rest of the universe \cite{F.F.Chen1989}.
+
+Plasmas are of particular interest in industrial environments. In particular, radio frequency plasmas are frequently used for materials processing; the plasma chamber that we are using was previously used for cleaning petri dishes in a biomedical manufacturing facility.
 
 In our experiment, we continue the previous work of Mann and Morton \cite{Mann2015} by generating an RF signal between two electrodes, which creates a capacitively coupled plasma (CCP) between the plates with a Debye sheath at the plates, as shown in \cref{fig:plasma-sheath}.
 
