Remove float modifiers from figures

--- a/paper/plasma-iv-characteristics.tex
+++ b/paper/plasma-iv-characteristics.tex
@@ -24,7 +24,7 @@ In our experiment, we continue the previous work of Mann and Morton \cite{Mann20
 
 In this paper, we will examine the equipment and errors in our experimental setup, present the results we have collected, discuss those results, and conclude with final thoughts and direction for future work.
 
-\begin{figure}[h]
+\begin{figure}
 \includegraphics[width=\columnwidth]{../resources/plasma-sheath.png}
 \caption{(Color Online) Capacitor plates and Debye sheath}
 \label{fig:plasma-sheath}
@@ -59,7 +59,7 @@ Unfortunately, as discussed in later sections, our data was not able to be analy
 
 As can be seen in \cref{fig:ignition-extinction}, our collected ignition voltages do not follow the same pattern as expected by Paschen's Law. The largest evidence of this is the negative curvature that is seen in at the higher pressures -- Pachen's Law produces a curve with exclusively positive curvature in our region of interest. The other clear difference from Paschen's Law is that we do not find a sharp increase at lower pressures.
 
-\begin{figure}[h]
+\begin{figure}
 \includegraphics[width=\columnwidth]{../resources/ignition-extinction.pdf}
 \caption{(Color Online) Collected ignition, equilibrium, and extinction voltage}
 \label{fig:ignition-extinction}
